--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.3.4.RELEASE'
+    compile('org.springframework.session:spring-session-jdbc')
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile('org.postgresql:postgresql')
     compile('org.projectlombok:lombok')
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
