--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
@@ -10,3 +10,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+security.oauth2.client.clientId=${clientId}
+security.oauth2.client.clientSecret=${secretKey}
+security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
+security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.client.scope=openid,email,profile
+security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
+security.oauth2.resource.preferTokenInfo=true
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
+spring.session.jdbc.schema=classpath:session_tables.sql
