--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-security')
     compile("org.springframework.boot:spring-boot-starter-websocket")
     compile group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.3.4.RELEASE'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
     compile('org.springframework.session:spring-session-jdbc')
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile('org.postgresql:postgresql')
